--- a/index.html
+++ b/index.html
@@ -3,43 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mensaje para Marieclaire</title>
+    <title>8 Meses</title>
     <style>
         body {
-            background-color: #ffe6e6;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .images img {
+            width: 100%;
+            margin-bottom: 20px;
+        }
+        .text {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #333;
             text-align: center;
         }
-        h1 {
-            color: #ff6666;
-            font-size: 2.5em;
-        }
-        .hearts {
-            font-size: 2em;
-            color: #ff6699;
-        }
-        .bears {
-            margin-top: 20px;
-        }
-        .bear {
-            width: 100px;
-            height: 100px;
-            margin: 10px;
+        .text span {
+            color: #e74c3c;
         }
     </style>
 </head>
 <body>
-    <h1>Perdóname mi amor, te amo mucho Marieclaire</h1>
-    <div class="hearts">❤️❤️❤️❤️❤️</div>
-    <div class="bears">
-        <img class="bear" src="https://i.imgur.com/5cLXV6i.png" alt="Teddy Bear">
-        <img class="bear" src="https://i.imgur.com/5cLXV6i.png" alt="Teddy Bear">
-        <img class="bear" src="https://i.imgur.com/5cLXV6i.png" alt="Teddy Bear">
+    <div class="container">
+        <div class="images">
+            <img src="file-DvogbbS7wHiG3WLUWVKWKMmw" alt="Image 1">
+            <img src="file-H3wif3WRVGnKYDUrmHhWPbFO" alt="Image 2">
+            <img src="file-xzfcoRYYeTiVIYsOZuX6WyiN" alt="Image 3">
+        </div>
+        <div class="text">
+            <p>Ya son 8 meses con utte amor 🥺 an sido meses maravillosos junto a utte me hace tan feliz, cada momento cada risa cada broma todo pero absolutamente todo es especial, Tu presencia en mi vida me hace tan feliz y me gustaría que sigamos construyendo juntos una relación sana y llena de amor. Eres mi todo, Marieclaire, y aunque últimamente no hemos podido vernos tanto como quisiera quiero que sepas que te extraño muchísimo😞 te amo mi niña preciosa 💕<span>20-12-2023</span>💕</p>
+        </div>
     </div>
 </body>
 </html>
+
